# tellurium

./: CHANGELOG.md  qt-mage.cabal
app/: Action.hs  Cooldown.hs  MageState.hs  Main.hs  Menu.hs  Util.hs
app/Action/: Actions.hs
app/Boss/: Bosses.hs
app/Status/: Statuses.hs
