cabal-version:      3.0
name:               qt-mage
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             pantaelaman
maintainer:         calvin@theophoffs.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -threaded

executable qt-mage
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Util,
        Action,
        Action.Actions,
        MageState,
        Cooldown,
        Status.Statuses,
        Boss.Bosses,
        Menu
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        brick,
        vty >=6.0,
        vty-crossplatform,
        microlens-platform,
        lens,
        timers,
        suspend,
        containers,
        matrix,
        vector,
        random
    hs-source-dirs:   app
    default-language: GHC2021
